--- a/build.gradle
+++ b/build.gradle
@@ -16,8 +16,11 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'mysql:mysql-connector-java'
-    runtimeOnly 'com.h2database:h2'
+    implementation 'com.google.guava:guava:11.0.2'
+
+    testImplementation 'io.rest-assured:rest-assured:3.3.0'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    runtimeOnly 'com.h2database:h2'
 }
 
 test {
