--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -7,3 +7,10 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
+################# Redis ##########################
+spring.session.store-type=redis
+spring.session.redis.flush-mode=on_save
+spring.session.redis.namespace=spring:session
+spring.redis.host=localhost
+spring.redis.password=root
+spring.redis.port=6379
